trino/base/hive-metastore-dc.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: hive
    hive: metastore
  name: hive-metastore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hive
      hive: metastore
  serviceName: hive-metastore
  template:
    metadata:
      labels:
        app: hive
        hive: metastore
    spec:
      containers:
      - name: metastore
        args:
          - /opt/hive/bin/hive
          - --service
          - metastore
        command:
          - /hive-scripts/entrypoint.sh
        image: quay.io/cloudservices/ubi-hive:2.3.3-002
        imagePullPolicy: Always
        ports:
          - containerPort: 9083
            name: meta
          - containerPort: 8082
            name: metrics
        livenessProbe:
          failureThreshold: 3
          initialDelaySeconds: 180
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9083
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8082
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1
            memory: 1Gi
        volumeMounts:
          - mountPath: /hive-config
            name: hive-config
          - mountPath: /hive-scripts
            name: hive-scripts
          - mountPath: /opt/jmx_exporter/config
            name: hive-jmx-config
          - mountPath: /var/lib/hive
            name: hive-metastore-db-data
          - mountPath: /hadoop/dfs/name
            name: namenode-empty
          - mountPath: /hadoop/dfs/data
            name: datanode-empty
          - mountPath: /opt/hadoop/logs
            name: hadoop-logs
          - mountPath: /hadoop-config
            name: hadoop-config
      volumes:
        - name: hive-config
          configMap:
            name: hive-config
        - name: hive-scripts
          configMap:
            defaultMode: 509
            name: hive-scripts
        - name: hive-jmx-config
          configMap:
            name: hive-jmx-config
        - name: namenode-empty
          emptyDir: {}
        - name: datanode-empty
          emptyDir: {}
        - name: hadoop-logs
          emptyDir: {}
        - name: hive-metastore-db-data
          emptyDir: {}
        - name: hadoop-config
          secret:
            defaultMode: 420
            secretName: hadoop-config
