trino/base/trino-db-dc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trino-db
  labels:
    app: trino
  annotations:
    template.alpha.openshift.io/wait-for-ready: "true"
spec:
  selector:
    matchLabels:
      deployment: trino-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        deployment: trino-db
    spec:
      containers:
        - name: postgresql
          image: postgresql
          ports:
            - containerPort: 5432
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - "/usr/libexec/check-container"
          livenessProbe:
            exec:
              command:
                - "/usr/libexec/check-container"
                - "--live"
          resources:
            limits:
              cpu: 1
              memory: "2Gi"
            requests:
              cpu: 1
              memory: "1Gi"
          volumeMounts:
            - name: "postgresql-data"
              mountPath: "/var/lib/pgsql/data"
          terminationMessagePath: "/dev/termination-log"
          imagePullPolicy: IfNotPresent
      volumes:
        - name: "postgresql-data"
          persistentVolumeClaim:
            claimName: trino-db-volume
