trino/base/hive-metastore-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hive-metastore
  labels:
    instance: presto
    role: hive-metastore
spec:
  ports:
    - protocol: TCP
      port: 9083
      targetPort: 9083
  selector:
    instance: presto
    role: hive-metastore
