trino/base/trino-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trino-service
  labels:
    instance: trino
    role: trino-coordinator
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    instance: trino
    role: trino-coordinator
