trino/base/trino-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: trino-route
  labels:
    instance: trino
    role: trino-coordinator
spec:
  to:
    kind: Service
    name: trino-service
  port:
    targetPort: 8080
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
